src/tui/app/src/chatwidget/snapshots/lha_tui__chatwidget__tests__model_picker_filters_hidden_models.snap
---
source: src/harness/tui/src/chatwidget/tests.rs
expression: popup
---
  Select Model and Effort
  Access legacy models by running lha -m <model_name> or in your config.toml

› 1. test-visible-model (current)  test-visible-model description

  Press enter to select reasoning effort, or esc to dismiss.
