src/tui/app/src/chatwidget/snapshots/lha_tui__chatwidget__tests__review_queues_user_messages_snapshot.snap
---
source: src/tui/app/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---










• Working (0s • esc to interrupt)

  ↳ Queued while /review is running.
    ⌥ + ↑ edit

› Ask LHA to do anything

  gpt-5.3-codex · 100% left · ~/Workspace/lha/src/tui/app
